src/test/run-pass/for-loop-fail.rs
fn main() { let x: ~[int] = ~[]; for x.each |_i| { fail ~"moop"; } }
